Correct FF alignment issue (Contact)
Centers left-aligned section.

--- a/static/styles/skyports.css
+++ b/static/styles/skyports.css
@@ -110,6 +110,7 @@ div.l-box {
 .contact-section .ribbon .pure-u-1 {
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
 
 p {
